--- a/docs/tutorials/maps.ipynb
+++ b/docs/tutorials/maps.ipynb
@@ -65,7 +65,8 @@
     "\n",
     "### Using Factory Methods\n",
     "\n",
-    "Maps are most easily created using the `~gammapy.maps.Map.create()` factory method:"
+    "The `~Map` class provides a `~gammapy.maps.Map.create()` factory method to facilitate creating an empty map object from scratch. The ``map_type`` argument can be used to\n",
+    "control the pixelization scheme (WCS or HPX)."
    ]
   },
   {
@@ -74,7 +75,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m_allsky = Map.create()"
+    "position = SkyCoord(0.0, 5.0, frame='galactic', unit='deg')\n",
+    "\n",
+    "# Create a WCS Map\n",
+    "m_wcs = Map.create(binsz=0.1, map_type='wcs', skydir=position, width=10.0)\n",
+    "\n",
+    "# Create a HPX Map\n",
+    "m_hpx = Map.create(binsz=0.1, map_type='hpx', skydir=position, width=10.0)\n"
    ]
   },
   {
@@ -1041,7 +1048,7 @@
        "description": "Select energy_true:",
        "description_tooltip": null,
        "disabled": false,
-       "index": 0,
+       "index": 0.0,
        "layout": "IPY_MODEL_7d6da20bc1204bb794495c6d4dff8007",
        "orientation": "horizontal",
        "readout": true,
@@ -1179,7 +1186,7 @@
        "description": "Select energy_true:",
        "description_tooltip": null,
        "disabled": false,
-       "index": 0,
+       "index": 0.0,
        "layout": "IPY_MODEL_6a5c1bf84bdb42ae9b90a0c1bbe0339a",
        "orientation": "horizontal",
        "readout": true,
@@ -1529,7 +1536,7 @@
        "description": "Select stretch:",
        "description_tooltip": null,
        "disabled": false,
-       "index": 0,
+       "index": 0.0,
        "layout": "IPY_MODEL_274414cb0146403fa1da214e644017b1",
        "style": "IPY_MODEL_161e98f22eb94899a1dc2cfc4fd431f8"
       }
@@ -1555,7 +1562,7 @@
        "description": "Select stretch:",
        "description_tooltip": null,
        "disabled": false,
-       "index": 1,
+       "index": 1.0,
        "layout": "IPY_MODEL_f1baed97cd934eb3845e2f961d2eaf29",
        "style": "IPY_MODEL_b9ce9dfa9e8c4f1a8fb7cd9affbb6706"
       }
@@ -1717,8 +1724,8 @@
       }
      }
     },
-    "version_major": 2,
-    "version_minor": 0
+    "version_major": 2.0,
+    "version_minor": 0.0
    }
   }
  },
