--- a/docs/tutorials/api/mask_maps.ipynb
+++ b/docs/tutorials/api/mask_maps.ipynb
@@ -13,16 +13,30 @@
     "\n",
     "## Context\n",
     "\n",
-    "### Fit masks\n",
+    "There are two main categories of masks in Gammapy for different use cases.\n",
+    "- Fitting often requires to ignore some parts of a reduced dataset, e.g. to restrict the fit to a specific energy range or to ignore parts of the region of interest that the user does not want to model, or both. \n",
+    "Gammapy's `Datasets` therefore contain a `mask_fit` sharing the same geometry as the data (i.e. `counts`).\n",
+    "- During data reduction, some background makers will normalize the background model template\n",
+    "on the data themselves. To limit contamination by real photons, one has to exclude parts of the \n",
+    "field-of-view where signal is expected to be large. To do so, one needs to provide an exclusion mask. \n",
+    "The latter can be provided in a different geometry as it will be reprojected by the `Makers`.\n",
+    "\n",
+    "We explain in more details these two types of masks below:\n",
+    "\n",
+    "### Masks for fitting: `mask_fit`\n",
     "\n",
     "The region of interest used for the fit can defined through the dataset `mask_fit` attribute.\n",
     "The `mask_fit` is a map containing boolean values where pixels used in the fit are stored as True.  \n",
     "\n",
-    "2D and 3D analyses usually require to work with a wider map than the region of interest so sources laying outside but reconstructed inside because of the PSF are correcly taken into account. Then the `mask_fit` have to include a margin that take into accout the PSF width. We will show an example in the boundary mask sub-section.\n",
+    "A spectral fit (1D or 3D) can be restricted to a specific energy range where e.g. the background\n",
+    "is well estimated or where the number of counts is large enough.\n",
+    "Similarly, 2D and 3D analyses usually require to work with a wider map than the region of interest so sources laying outside but reconstructed inside because of the PSF are correcly taken into account. Then the `mask_fit` have to include a margin that take into accout the PSF width. We will show an example in the boundary mask sub-section.\n",
     "\n",
     "The `mask_fit` also can be used to exclude sources or complex regions for which we don't have good enough models. In that case the masking is an extra security, it is prefereable to include the available models even if the sources are masked and frozen.\n",
     "\n",
-    "Note that a dataset contains also a `mask_safe` attribute that is not meant to be modified directly by users. The  `mask_safe` is defined only from the cuts used in the data reductions (more details [here](https://docs.gammapy.org/dev/makers/index.html#safe-data-range-handling)).\n",
+    "Note that a dataset contains also a `mask_safe` attribute that is created and filled during \n",
+    "data reduction. It is not to be modified directly by users. The `mask_safe` is defined only from \n",
+    "the options passed to the `~gammapy.makers.SafeMaskMaker` (More details [here](https://docs.gammapy.org/dev/makers/index.html#safe-data-range-handling)).\n",
     "\n",
     "### Exclusion masks\n",
     "\n",
@@ -512,7 +526,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
