--- a/docs/tutorials/api/mask_maps.ipynb
+++ b/docs/tutorials/api/mask_maps.ipynb
@@ -84,7 +84,7 @@
     "from astropy.coordinates import SkyCoord, Angle\n",
     "import astropy.units as u\n",
     "from regions import CircleSkyRegion\n",
-    "from gammapy.maps import Map, WcsGeom\n",
+    "from gammapy.maps import Map, WcsGeom, MapAxis\n",
     "from gammapy.utils.regions import make_region\n",
     "from gammapy.catalog import CATALOG_REGISTRY\n",
     "from gammapy.datasets import Datasets\n",
@@ -98,6 +98,75 @@
    "source": [
     "## Masks creation\n",
     "\n",
+    "### Create a mask from an energy range\n",
+    "\n",
+    "One can build a `mask_fit` to restrict the energy range of pixels used in a  We show here how to proceed.\n",
+    "\n",
+    "#### Define the geometry\n",
+    "\n",
+    "Masks are stored in `Map` objects. We must first define its geometry and then we can determine which pixels to exclude. Here we consider a region at the Galactic anticentre around the crab nebula."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "energy_axis = MapAxis.from_energy_bounds(0.1,10, 10, unit=\"TeV\")\n",
+    "\n",
+    "position = SkyCoord(83.633083, 22.0145, unit=\"deg\", frame=\"icrs\")\n",
+    "geom = WcsGeom.create(\n",
+    "    skydir=position, width=\"5 deg\", binsz=0.02, frame=\"galactic\", axes=[energy_axis]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a mask in energy\n",
+    "\n",
+    "We show first how to use a simple helper function `~gammapy.maps.Geom.energy_range()`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_energy = geom.energy_mask(0.5*u.TeV, 5*u.TeV)\n",
+    "\n",
+    "# check the values of the mask at the center position for all energy bins\n",
+    "mask_energy.get_by_coord((position, energy_axis.center))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you are more familiar with the `Geom` and `Map` API, you can also create the mask manually from the coordinates of all pixels in the geometry. Here we simply show how to obtain the same behaviour as the `energy_mask` helper method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coords = geom.get_coord()\n",
+    "mask_data = (coords[\"energy\"]>0.5*u.TeV) & (coords[\"energy\"]<5*u.TeV)\n",
+    "mask_energy = Map.from_geom(geom, data=mask_data)\n",
+    "\n",
+    "# check the values of the mask at the center position for all energy bins\n",
+    "mask_energy.get_by_coord((position, energy_axis.center))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Create the mask from a list of regions\n",
     "\n",
     "One can build an exclusion mask from regions. We show here how to proceed.\n",
